--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.40",
+    "@types/react-native": "^0.72.7",
+    "typescript": "^5.3.2"
   },
   "private": true
 }
