--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "skipLibCheck": true,
     "baseUrl": "./",
-    "types": ["react", "react-native"],
+    "types": ["node", "react", "react-native"],
     "paths": {
       "*": ["types/*"]
     }
@@ -23,5 +23,6 @@
     "babel.config.js",
     "metro.config.js",
     "jest.config.js"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
