--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~49.0.15",
+    "expo": "~49.0.21",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@types/node": "^20.10.2",
     "@types/react": "^18.2.40",
     "@types/react-native": "^0.72.7",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.2"
   },
   "private": true
